test build mini as param1

--- a/src/config/zeroone-config.h.in
+++ b/src/config/zeroone-config.h.in
@@ -40,6 +40,9 @@
 /* Define to 1 to enable ZMQ functions */
 #undef ENABLE_ZMQ
 
+/* Define to 1 to enable MINI functions */
+#undef ENABLE_MINI
+
 /* parameter and return value type for __fdelt_chk */
 #undef FDELT_TYPE
 
