--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -26,9 +26,9 @@ Build-Depends: debhelper,
  python,
  libzmq3-dev
 Standards-Version: 3.9.2
-Homepage: https://www.zeroone.org/
-Vcs-Git: git://github.com/zeroonecoin/zeroone.git
-Vcs-Browser: https://github.com/zeroonecoin/zeroone
+Homepage: https://01coin.io/
+Vcs-Git: git://github.com/zocteam/zeroonecoin.git
+Vcs-Browser: https://github.com/zocteam/zeroonecoin
 
 Package: zerooned
 Architecture: any
