--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,6 +83,7 @@ BITCOIN_CORE_H = \
   addressindex.h \
   spentindex.h \
   addrman.h \
+  alert.h \
   base58.h \
   bip39.h \
   bip39_english.h \
@@ -224,6 +225,7 @@ libzeroone_server_a_SOURCES = \
   activemasternode.cpp \
   addrman.cpp \
   addrdb.cpp \
+  alert.cpp \
   bloom.cpp \
   blockencodings.cpp \
   chain.cpp \
